--- a/package.json
+++ b/package.json
@@ -3,10 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
     "@paypal/paypal-js": "^1.0.4",
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.2",
     "@testing-library/user-event": "^12.2.2",
+    "fontsource-nunito-sans": "^3.0.9",
     "paypal": "^1.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
