Add configuration options: React props and HTML data element

--- a/src/components/config.json.example
+++ b/src/components/config.json.example
@@ -1,4 +1,4 @@
 {
-  "ILP_wallet": <ILP wallet>,
-  "PayPal_email": <Email associated to the PayPal account>
+  "ILP_wallet": "<ILP wallet>",
+  "PayPal_email": "<Email associated to the PayPal account>"
 }
